--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,10 @@ version = "0.1.0"
 authors = ["hyena <hyena@users.noreply.github.com>"]
 
 [dependencies]
-frank_jwt = "2.5.1"
 hyper = "0.10.12"
 hyper-native-tls = "0.2.4"
+jsonwebtoken = "2"
+log = "0.3"
 uuid = { version = "0.4", features = ["v4"] }
 serde = "1.0"
 serde_derive = "1.0"
@@ -14,14 +15,14 @@ serde_json = "1.0"
 
 [dependencies.rocket]
 git = "https://github.com/SergioBenitez/Rocket.git"
-rev = "b8ba7b8"
+rev = "2aad1d8"
 
 [dependencies.rocket_codegen]
 git = "https://github.com/SergioBenitez/Rocket.git"
-rev = "b8ba7b8"
+rev = "2aad1d8"
 
 [dependencies.rocket_contrib]
 git = "https://github.com/SergioBenitez/Rocket.git"
-rev = "b8ba7b8"
+rev = "2aad1d8"
 default-features = false
 features = ["tera_templates"]
